# calculator-engine

./: .gitignore  Analyzing Project Architecture.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Evaluator.cpp  Lexer.cpp  Lexer.hpp  Makefile  Parser.cpp  Parser.hpp  README.md  Token.hpp  Util.hpp  analysis_and_refinements.md  calculator-backend  cmake_install.cmake  compile_commands.json  design_analysis.md  main.cpp  todos.txt
.cmake/api/v1/reply/: cmakeFiles-v1-8a4fd99e7e966865ebb0.json
Testing/: TAG
Testing/20260227-1714/: Test.xml
src/: Evaluator.cpp  Evaluator.hpp  IO.h  Lexer.cpp  Lexer.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  Parser.cpp  Parser.hpp  PrettyPrint.cpp  PrettyPrint.h  Token.hpp  main.cpp
tests/: test_evaluator.cpp  test_integration.cpp  test_lexer.cpp  test_main.cpp  test_matrix.cpp  test_parser.cpp  test_token.cpp
